fix:heroText-alignment

--- a/src/components/pages/main/main.module.css
+++ b/src/components/pages/main/main.module.css
@@ -10,6 +10,7 @@
   width: 537px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
   gap: 24px;
   color: var(--white-100);
